--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,33 +1,75 @@
-<p id="notice"><%= notice %></p>
+<div class="card-panel">
+  <%= search_form_for @search, url: search_products_path, method: :post do |f| %>
+      <%= f.condition_fields do |c| %>
+          <div class="col s12">
+            <%= render "condition_fields", f: c %>
+          </div>
+      <% end %>
+      <div class="col s12">
+        <%= link_to_add_fields "Add Conditions", f, :condition %>
+      </div>
 
-<h1>Listing Products</h1>
+      <div class="field col s12">
+        <h5 class="col s3">Sort:</h5>
+        <%= f.sort_fields do |s| %>
+            <%= s.sort_select({}, {:class => "browser-default col s3"}) %>
+        <% end %>
+      </div>
 
-<div>
+      <div class="actions"><%= f.submit "Search", :class => "btn" %></div>
+  <% end %>
+</div>
+
+
+
+
+<%- model_class = Product -%>
+<div class="page-header">
+  <h1><%= t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
-    <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Store</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th><%= model_class.human_attribute_name(:id) %></th>
+    <th><%= model_class.human_attribute_name(:name) %></th>
+    <th><%= model_class.human_attribute_name(:price) %></th>
+    <th><%= model_class.human_attribute_name(:store_id) %></th>
+    <th><%= model_class.human_attribute_name(:category_id) %></th>
+    <th><%= model_class.human_attribute_name(:created_at) %></th>
+    <th><%= t '.actions', :default => t("helpers.actions") %></th>
+  </tr>
   </thead>
-
   <tbody>
-    <% @products.each do |product| %>
+  <% @products.each do |product| %>
       <tr>
+        <td><%= link_to product.id, product_path(product) %></td>
         <td><%= product.name %></td>
         <td><%= product.price %></td>
         <td><%= product.store_id %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= product.category.name %></td>
+        <td><%= l product.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_product_path(product), :class => 'btn btn-default btn-xs' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      product_path(product),
+                      :method => :delete,
+                      :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
+                      :class => 'btn btn-xs btn-danger' %>
+        </td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
-</div>
+</table>
 
-<br>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_product_path,
+            :class => 'btn btn-primary' %>
 
-<%= link_to 'New Product', new_product_path %>
 
 
+<script>
+    $(document).ready(function () {
+        $('select').material_select();
+    });
+</script>
