--- a/app/views/products/_condition_fields.html.erb
+++ b/app/views/products/_condition_fields.html.erb
@@ -1,4 +1,4 @@
-<div class="field">
+<div class="field col s12">
   <%= f.attribute_fields do |a| %>
       <%= a.attribute_select({associations: [:category]}, {:class => "browser-default col s3"}) %>
   <% end %>
